list_controller: added POST enpoint
